# S-Stream

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  THIRD-PARTY-LICENSES  TRUST.md  cpu_lbm.py  cpu_lbm3d.py  gpu_lbm3d.py  main.py  plan.md  pyproject.toml  requirements.txt  setup.py  sstream.spec  visualizer.py  visualizer3d.py
.github/workflows/: ci.yml  release.yml
analysis/: ai_context.py  physics.py  regimes.py  sanity.py  scorecard.py  sweep.py
blender/: __init__.py
cuda/: lbm.cu  lbm.h
docs/: naming_pass.md
docs/algorithms/: README.md  bkg_collision.md  carreau_model.md  power_law.md  smagorinsky_sgs.md  trt_collision.md  wale_model.md
engines/: __init__.py  adjoint.py  api.py  base.py  boundary_conditions.py  collision.py  forcing.py  free_surface.py  fsi.py  ibm.py  lbm2d.py  lbm2d_gpu.py  lbm2d_lettuce.py  lbm2d_liquid.py  lbm2d_multicomponent.py  lbm3d.py  lbm3d_cpu.py  lbm3d_gpu.py  lbm_common.py  non_newtonian.py  particle_tracer.py  smoke_mixin.py  thermal_mixin.py
export/: data.py  image.py  report.py  video.py
presets/: loader.py
presets/scenes/: backward_facing_step.json  bluff_body_drag.json  channel_flow.json  cylinder.json  karman_street.json  lid_driven_cavity.json  nozzle_diffuser.json  oil_water_separation.json  porous_screen.json  two_cylinder_interference.json
python/: __init__.py  bindings.cpp
resources/: colormaps.py  theme.py
scene/: probe.py  scene.py  serializer.py
scripts/: build.py  build_windows.bat  render_presets.py
sstream/: __init__.py
tests/: benchmark.py  conftest.py  test_3d.py  test_analysis.py  test_basic.py  test_lbm.py  test_lbm3d.py  test_liquid.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase5_3.py  test_phase6_1.py  test_phase6_3.py  test_phase6_5_6.py  test_phase_d.py  test_physics.py  test_scene.py
tests/validation/: test_benchmarks.py
ui/: app.py  renderer.py  widgets.py
workbench/: app.py  viewport.py
workbench/dialogs/: export_dialog.py  presets_dialog.py  recipes_dialog.py  sweep_dialog.py  wizard_dialog.py
workbench/panels/: analysis_panel.py  outcome_panel.py  scene_panel.py
