[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cufloda"
version = "0.2.0"
description = "2D/3D fluid dynamics simulation using Lattice Boltzmann Method"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "PyOpenGL>=3.1.6",
    "glfw>=2.6.0",
    "imgui[glfw]>=2.0.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0.0"]

[project.scripts]
cufloda = "main:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
