[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "s-stream"
version = "0.3.0"
description = "2D Lattice Boltzmann fluid workbench with PySide6 UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.59",
    "PyOpenGL>=3.1.6",
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.5.0",
    "trimesh>=3.20.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0.0"]

[project.scripts]
s-stream = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = { find = { include = ["engines*", "scene*", "analysis*", "export*", "presets*", "workbench*"] } }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.svg", "*.ico", "*.qss"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
